# projeto_dbt_northwind

./: pyproject.toml
northwind/models/raw/: raw_order_details.sql
